// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Container
  htmlFor="The Label"
  label=""
  style={
    Object {
      "flexGrow": 0,
      "flexShrink": 0,
    }
  }
>
  <Button
    name="The Label"
    onClick={[Function]}
    type="button"
  >
    The Label
  </Button>
</Container>
`;

exports[`should render correctly when disabled 1`] = `
<Container
  htmlFor="The Label"
  label=""
  style={
    Object {
      "flexGrow": 0,
      "flexShrink": 0,
    }
  }
>
  <Button
    disabled={true}
    name="The Label"
    onClick={[Function]}
    type="button"
  >
    The Label
  </Button>
</Container>
`;

exports[`should render correctly when submitting 1`] = `
<Container
  htmlFor="The Label"
  label=""
  style={
    Object {
      "flexGrow": 0,
      "flexShrink": 0,
    }
  }
>
  <Button
    name="The Label"
    onClick={[Function]}
    submitting={true}
    type="button"
  >
    The Label
  </Button>
</Container>
`;
